03-network/backend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
