03-network/cache_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cache
spec:
  selector:
    app: cache
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
