03-network/frontend_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - name: multitool
      protocol: TCP
      port: 8080
